<resources>
    <!--App name-->
    <string name="app_name">C&amp;C:Online Spymaster</string>

    <!--Start SlidingTabLayout labels-->
    <string name="title_section1">Players</string>
    <string name="title_section2">Open Lobbies</string>
    <string name="title_section3">In Game</string>
    <!--End SlidingTabLayout labels-->


    <!--Names of the games in question. Do not need translation-->
    <string name="KanesWrath">Kane\'s Wrath</string>
    <string name="CandC3">C&amp;C 3</string>
    <string name="Generals">Generals</string>
    <string name="ZeroHour">Zero Hour</string>
    <string name="RedAlert3">Red Alert 3</string>



    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Start Licences -->
    <string name="licence">Licence</string>
    <string name="BSD">Copyright © 2015, Henry Zimmerman\n
            All rights reserved.\n\n

            Redistribution and use in source and binary forms, with or without
            modification, are permitted provided that the following conditions are met:\n\n

            Redistributions of source code must retain the above copyright notice, this
            list of conditions and the following disclaimer.\n\n

            Redistributions in binary form must reproduce the above copyright notice,
            this list of conditions and the following disclaimer in the documentation
            and/or other materials provided with the distribution.\n\n

            Neither the name of C-C-Online-Spymaster nor the names of its
            contributors may be used to endorse or promote products derived from
            this software without specific prior written permission.\n\n


            THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
            AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
            IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
            DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
            FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
            DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
            SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
            CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
            OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
            OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>

    <string name="AndroidAssetStudio">
        Some assets that were not provided by the Android SDK were generated by Android Asset Studio.
        All assets generated by the Android Asset Studio are licensed under a \n
        Creative Commons Attribution 3.0 Unported License. \n
        http://creativecommons.org/licenses/by/3.0/
    </string>
    <string name="AndroidIcons">
        Some assets that were not provided by the Android SDK were taken from AndroidIcons.
        All assets from AndroidIcons are licensed under a \n
        Creative Commons Attribution-ShareAlike 4.0 International Public License \n
        http://creativecommons.org/licenses/by-sa/4.0/
    </string>
    <!--End Licences-->

    <!--Start Game Cards-->
    <string name="map">Map:</string>
    <string name="players">Players:</string>
    <string name="the_game_is_locked">The game is locked</string>
    <!--End Game Cards-->




    <!--Start Generic-->
    <string name="help">Help</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <!--End Generic-->

    <!--Start DB strings-->
    <string name="reset_db_summary">Reset the local database that holds player data.</string>
    <string name="reset_player_db">Reset Player Database</string>
    <string name="player_db_help_message">This page displays all of the players you have marked as a friend, marked to receive notifications or marked as yourself. You can alter their marks here. Note: removing all marks will cause the player to be removed from this list and you will have to wait for them to come online again to add them again.</string>
    <string name="local_player_database">Local Player Database</string>
    <string name="reset_db_disclaimer">
        "This will reset the database that holds all of the players that you have marked as your friend, for you to receive notifications about their online status, and those you marked as yourself.

        Are you sure you want to continue?
        "</string>
    <!--End DB strings-->

    <string name="friends_online_service_label">CnC Players Online</string>
    <string name="flag_for_marking_friends">Flag for marking friends.</string>
    <string name="flag_if_you_want_to_receive_notifications_about_this_player">Flag if you want to receive notifications about this player.</string>
    <string name="flag_for_marking_yourself">Flag for marking yourself.</string>
    <string name="profile">Profile Page</string>
    <string name="user_name">User Name</string>
    <string name="donate">Donate to Revora</string>
    <string name="donate_summary">Revora server is the source of the player data this app uses.</string>

    <!--Start strings for main activity help-->
    <string name="yourself_description">This icon represents yourself. You can configure the app to only send notifications if you are also online.</string>
    <string name="help_manage_players_description"><![CDATA[To access players that you have saved while they are offline, you can visit Settings > Manage Players.]]></string>
    <string name="notification_description">This icon means that, if enabled, the app will notify you if this player is online.</string>
    <string name="friends_description">This icon indicates friends. This is useful for recognizing players as you scroll through the list of players.</string>
    <string name="help_player_checkbox">Clicking on a player will expand them. Clicking on any of checkboxes will save the player locally to the phone.</string>

    <string name="player_icon">Player Icon</string>
    <string name="bell_icon">Bell Icon</string>
    <string name="heart_icon">Heart Icon</string>
    <!--End strings for main activity help-->

    <!--Start error messages for toasts-->
    <string name="err_malformed_url">Malformed URL</string>
    <string name="err_ladder_unavailable">Ladder Stats Unavailable</string>
    <string name="err_player_unavailable">Player Stats Unavailable</string>
    <string name="err_player_game_is_none">Player Stored Incorrectly</string>
    <string name="connection_error">Connection Error</string>
    <!--End error messages for toasts-->



    <!-- Start statistics viewing activities-->
    <string name="player_stats">Player Statistics</string>
    <string name="ladder_stats">Ladder Statistics</string>

    <string name="preposition_for">for</string>
    <string name="total_games">Total Games</string>
    <string name="ranked_one_vs_one_wins">Ranked One Vs. One Wins</string>
    <string name="ranked_one_vs_one_losses">Ranked One Vs. One Losses</string>
    <string name="ranked_one_vs_one_disconnects">Ranked One Vs. One Disconnects</string>
    <string name="ranked_one_vs_one_desyncs">Ranked One Vs. One Desyncs</string>
    <string name="ranked_two_vs_two_games">Ranked Two Vs. Two Games</string>
    <string name="total_wins">Total Wins</string>
    <string name="total_losses">Total Losses</string>
    <string name="total_disconnects">Total Disconnects</string>
    <string name="total_desyncs">Total Desyncs</string>
    <string name="rank_one_vs_one">Rank One Vs One</string>
    <string name="ladder_win_loss">Ladder W/L</string>
    <string name="elo">ELO</string>
    <string name="games">Games</string>
    <string name="wins">Wins</string>
    <string name="losses">Losses</string>
    <string name="disconnects">Disconnects</string>
    <string name="desyncs">Desyncs</string>
    <!--End statistics viewing activities-->

    <!--Start Player Card-->
    <string name="player_statistics">Player Statistics</string>
    <string name="ladder_statistics">Ladder Statistics</string>
    <string name="id">ID:</string>
    <string name="pid">PID:</string>
    <string name="receive_notifications">Receive Notifications</string>
    <string name="friends">Friends</string>
    <string name="player_is_you">Player is Yourself</string>

    <!--End Player Card-->



</resources>
