<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/players_name"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/user_name"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:id="@+id/name_loading_progress_bar"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ProgressBar
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <View
                android:layout_width="48dp"
                android:layout_height="24dp"/>

        </LinearLayout>

        <TextView
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/players_user_name"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/friends"/>
        <CheckBox
            android:buttonTint="@color/kw_red"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:id="@+id/friends_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/receive_notifications"/>
        <CheckBox
            android:buttonTint="@color/normal_blue"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:id="@+id/notifications_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/player_is_you"/>
        <CheckBox
            android:buttonTint="@color/cnc3_green"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:id="@+id/is_you_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</LinearLayout>